# AnimeSuperTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: generate_shader_comp_header.cmake  main.cpp
src/ifrnet/: ifrnet.cpp  ifrnet.h  ifrnet_ops.h  warp.cpp
src/realcugan/: realcugan.cpp  realcugan.h
src/rife/: rife.cpp  rife.h  rife_ops.h  warp.cpp
src/threadpool/: threadpool.cpp  threadpool.h
src/utils/: config.h  cyclebuffer.hpp  progressbar.hpp
src/videoutils/: common.cpp  common.h  videoreader.cpp  videoreader.h  videowriter.cpp  videowriter.h
